Add user model and security definitions based on token
